ready to publish w/o video

--- a/portfolio-hunting.html
+++ b/portfolio-hunting.html
@@ -93,35 +93,27 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/chikify-main.jpg" alt="">
-                </div>
-                
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                     <video width="832" height="470" controls>
                         <source src="assets/img/portfolio/chikify-vid.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
+                </div> -->
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/hunting-main.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/chikify-2.jpg" alt="">
+                  <img src="assets/img/portfolio/hunting-2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/chikify-3.jpg" alt="">
+                  <img src="assets/img/portfolio/hunting-3.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                    <img src="assets/img/portfolio/chikify-4.PNG" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                    <img src="assets/img/portfolio/chikify-5.PNG" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                    <img src="assets/img/portfolio/chikify-6.PNG" alt="">
+                    <img src="assets/img/portfolio/hunting-4.jpg" alt="">
                 </div>
 
               </div>
@@ -142,16 +134,14 @@
           </div>
 
           <div class="portfolio-description">
-            <h2 class="fst-italic">A endless runner game where you take control of a
-                chicken that escaped from a chicken farm.Your mission is to navigate through a herd of fellow chickens, dashing past them while avoiding various obstacles that stand in your path
-            </h2>
+            <h2 class="fst-italic">This captivating hunting game offers two exciting modes in three diverse environments. In "Normal Hunting Mode," you'll take on the role of an expert hunter, venturing into the Jungle, Desert, and Snow landscapes. Each level presents a unique animal to hunt.In "Survial mode", the tables turn, and you become the hunted. You have to survive all the attacks from the wild animals.</h2>
             <ul>
-                <li>Created a environment using pre-made assets.</li>
-                <li>Designed and implemented the player control System.</li>
-                <li>Implemented the camera behavior using Cinemachine.</li>
-                <li>Built the AI (Waypoint System) for herd chickens.</li>
-                <li>Added Particle effects and Sound effects.</li>
-                <li>Implemented an intuitive and visually appealing UI, featuring various menu screens, sleek HUD to show essential gameplay information such as score, reward, and power-ups. All optimized for various screen sizes</li>
+                <li>Setup three diverse and immersive environments - the Jungle, Desert, and Snow - providing players with varied hunting experiences and stunning visuals.</li>
+                <li>Integrated the Realistic FPS package to enhance the player's movement and shooting mechanics.</li>
+                <li>Implemented a user-friendly mini-map system that aids players in navigation and displays animal targets.</li>
+                <li>Utilized the Emerald AI package to create lifelike animal behaviors, giving players challenging encounters with the wildlife.</li>
+                <li>Programmed the animals' AI behaviors, ensuring realistic responses to the player's actions, such as hunting, fleeing, or defending, adding depth to the hunting gameplay.</li>
+                
             </ul>
           </div>
 
