--- a/potfolio-tractor.html
+++ b/potfolio-tractor.html
@@ -93,36 +93,48 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
+              <!-- <div class="swiper-slide">
+                  <video width="832" height="470" controls>
+                      <source src="assets/img/portfolio/chikify-vid.mp4" type="video/mp4">
+                      Your browser does not support the video tag.
+                  </video>
+              </div> -->
+
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/chikify-main.jpg" alt="">
-                </div>
-                
-                <div class="swiper-slide">
-                    <video width="832" height="470" controls>
-                        <source src="assets/img/portfolio/chikify-vid.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
+                  <img src="assets/img/portfolio/farming-main.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/chikify-2.jpg" alt="">
+                  <img src="assets/img/portfolio/farming-2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/chikify-3.jpg" alt="">
+                  <img src="assets/img/portfolio/farming-3.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                    <img src="assets/img/portfolio/chikify-4.PNG" alt="">
+                    <img src="assets/img/portfolio/farming-4.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                    <img src="assets/img/portfolio/chikify-5.PNG" alt="">
+                    <img src="assets/img/portfolio/farming-5.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                    <img src="assets/img/portfolio/chikify-6.PNG" alt="">
+                    <img src="assets/img/portfolio/farming-6.jpg" alt="">
                 </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/farming-7.PNG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/farming-8.PNG" alt="">
+                </div>
+
+              <div class="swiper-slide">
+                <img src="assets/img/portfolio/farming-9.PNG" alt="">
+              </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -142,16 +154,16 @@
           </div>
 
           <div class="portfolio-description">
-            <h2 class="fst-italic">A endless runner game where you take control of a
-                chicken that escaped from a chicken farm.Your mission is to navigate through a herd of fellow chickens, dashing past them while avoiding various obstacles that stand in your path
+            <h2 class="fst-italic">In this farming simulation game, you'll step into the shoes of a farmer, responsible for daily tasks such as feeding cows, buying food for them, and taking care of the farm animals. But that's not all! You'll also get to hop behind the wheel of your trusty truck and venture into the vast fields to experience the full spectrum of farming activities, from sowing seeds to harvesting crops.
             </h2>
             <ul>
-                <li>Created a environment using pre-made assets.</li>
-                <li>Designed and implemented the player control System.</li>
-                <li>Implemented the camera behavior using Cinemachine.</li>
-                <li>Built the AI (Waypoint System) for herd chickens.</li>
-                <li>Added Particle effects and Sound effects.</li>
-                <li>Implemented an intuitive and visually appealing UI, featuring various menu screens, sleek HUD to show essential gameplay information such as score, reward, and power-ups. All optimized for various screen sizes</li>
+                <li>Implemented a first-person shooter system.</li>
+                <li>Implemented the car control system using the RealisticCarController(RCC) package, allowing players to drive the truck and grow crops.</li>
+                <li>Utilized the Control Freak 2 package to create intuitive touch controls, enhancing the game's accessibility on mobile devices..</li>
+                <li>Made 2 modes and 20 levels in total, keeping the levels in a storyline.</li>
+                <li>Developed an engaging shop system that allows players to purchase new trucks.</li>
+                <li>Integrated a user-friendly mini-map system that assists players in navigation, offering a clear overview of the farm and objectives.</li>
+                <li>Developed and integrated the game's UI based on the designer's provided assets, ensuring a seamless and intuitive user experience.</li>
             </ul>
           </div>
 
