--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/pfp.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Erad Ali</a></h1>
         <div class="social-links mt-3 text-center">
           <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
@@ -56,7 +56,7 @@
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
+          <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -84,7 +84,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/pfp.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Game Developer</h3>
@@ -95,7 +95,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Erad Ali</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Profile:</strong> <span>Uniyt Game Developer</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Profile:</strong> <span>Unity Game Developer</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+92-315-8958901</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>eradali34@yahoo.com</span></li>
                 </ul>
@@ -362,12 +362,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-professional">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/farming-main.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>3D Tractor Game: Farming</h4>
                 <p>Simulation</p>
                 <div class="portfolio-links">
-                <a href="potfolio-tractor.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="potfolio-tractor.html" title="More Details"><i class="bx bx-detail"></i></a>
                 </div>
               </div>
             </div>
@@ -375,12 +375,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-professional">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/hunting-main.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Hunting Clash</h4>
                 <p>Action, Shooter</p>
                 <div class="portfolio-links">
-                <a href="portfolio-hunting.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="portfolio-hunting.html" title="More Details"><i class="bx bx-detail"></i></a>
                 </div>
               </div>
             </div>
@@ -388,12 +388,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-professional">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/zombie-main.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Gun Shooting: Zombie Game</h4>
                 <p>Action, Shooter</p>
                 <div class="portfolio-links">
-                <a href="portfolio-zombie.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="portfolio-zombie.html" title="More Details"><i class="bx bx-detail"></i></a>
                 </div>
               </div>
             </div>
@@ -405,7 +405,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <!-- <section id="services" class="services">
       <div class="container">
 
         <div class="section-title">
@@ -447,7 +447,8 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section> -->
+    <!-- End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
 
