--- a/portfolio-chikify.html
+++ b/portfolio-chikify.html
@@ -93,15 +93,15 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
+              <!-- <div class="swiper-slide">
+                  <video width="832" height="470" controls>
+                      <source src="assets/img/portfolio/chikify-vid.mp4" type="video/mp4">
+                      Your browser does not support the video tag.
+                  </video>
+              </div> -->
+
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/chikify-main.jpg" alt="">
-                </div>
-                
-                <div class="swiper-slide">
-                    <video width="832" height="470" controls>
-                        <source src="assets/img/portfolio/chikify-vid.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
                 </div>
 
                 <div class="swiper-slide">
