--- a/portfolio-zombie.html
+++ b/portfolio-zombie.html
@@ -92,36 +92,25 @@
           <div class="col-lg-8">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/chikify-main.jpg" alt="">
-                </div>
                 
                 <div class="swiper-slide">
-                    <video width="832" height="470" controls>
-                        <source src="assets/img/portfolio/chikify-vid.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
+                  <img src="assets/img/portfolio/zombie-main.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/chikify-2.jpg" alt="">
+                  <img src="assets/img/portfolio/zombie-2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/chikify-3.jpg" alt="">
+                  <img src="assets/img/portfolio/zombie-3.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                    <img src="assets/img/portfolio/chikify-4.PNG" alt="">
+                    <img src="assets/img/portfolio/zombie-4.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                    <img src="assets/img/portfolio/chikify-5.PNG" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                    <img src="assets/img/portfolio/chikify-6.PNG" alt="">
+                    <img src="assets/img/portfolio/zombie-5.jpg" alt="">
                 </div>
 
               </div>
@@ -142,17 +131,16 @@
           </div>
 
           <div class="portfolio-description">
-            <h2 class="fst-italic">A endless runner game where you take control of a
-                chicken that escaped from a chicken farm.Your mission is to navigate through a herd of fellow chickens, dashing past them while avoiding various obstacles that stand in your path
+            <h2 class="fst-italic">Take on the role of a skilled soldier as you engage in epic battles against enemies. Additionally, face the undead in 'Zombie Mode.' Fight for your survival against hordes of zombies as they close in on you from all directions. Hold your ground, aim true, and eliminate every zombie to secure victory.
             </h2>
-            <ul>
+            <!-- <ul>
                 <li>Created a environment using pre-made assets.</li>
                 <li>Designed and implemented the player control System.</li>
                 <li>Implemented the camera behavior using Cinemachine.</li>
                 <li>Built the AI (Waypoint System) for herd chickens.</li>
                 <li>Added Particle effects and Sound effects.</li>
                 <li>Implemented an intuitive and visually appealing UI, featuring various menu screens, sleek HUD to show essential gameplay information such as score, reward, and power-ups. All optimized for various screen sizes</li>
-            </ul>
+            </ul> -->
           </div>
 
         </div>
