Updated - added 2 portfolio projs and other stuff

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/pfp.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/pfp-small.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Erad Ali</a></h1>
         <div class="social-links mt-3 text-center">
           <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
@@ -102,14 +102,14 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Khanewal, PK</span></li>
                 </ul>
               </div>
             </div>
             <p>
-              I am currently working as an indie developer, crafting unique gaming experiences using Unity. I also hold the position of lead in the game development society of our university.
+              I am a freelance game developer working on Upwork, focused on creating amazing projects with Unity. I’m always learning and keeping up with new technologies in game development. Right now, I’m diving into AR/VR to build more immersive and exciting experiences.
             </p>
           </div>
         </div>
@@ -123,7 +123,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>I am a skilled Unity game developer with expertise in using Unity3D and C# scripting. I can create captivating games with engaging gameplay, intuitive user interfaces, and ads-Integration. I focus on optimizing performance for smooth gaming on various platforms. My passion for game development compels me to pursue excellence and ensures that I never leave any task unfinished, striving to complete everything perfectly.</p>
+          <p>I specialize in Unity game development, creating both 2D and 3D games from scratch, adding new features, and reskinning existing games. My skills include game design, adaptive UI creation, animations, graphics enhancements with lighting and shaders, and integrating third-party plugins. I have experience with in-app purchases, ad integration, multiplayer setup, debugging, optimization, and version control management using GitHub and SourceTree.</p>
         </div>
 
         <div class="row skills-content">
@@ -170,16 +170,16 @@
             </div>
 
             <div class="progress">
-              <span class="skill">illustrator <i class="val">55%</i></span>
+              <span class="skill">illustrator <i class="val">30%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Version Control/Github <i class="val">80%</i></span>
+              <span class="skill">Version Control/Github <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -212,7 +212,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Projects</strong> completed</p>
             </div>
           </div>
@@ -220,7 +220,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="bi bi-clipboard"></i>
-              <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="20" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Hours Of Teaching</strong> unity and game development</p>
             </div>
           </div>
@@ -228,7 +228,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
               <i class="bi bi-clock-history"></i>
-              <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Years Of Experience</strong> in unity game development</p>
             </div>
           </div>
@@ -255,8 +255,7 @@
               <p><em>Accomplished game developer with a Unity Certified
                 Programmer certificate having over 2+ years of
                 experience of developing android games. Committed
-                to continuing learning to stay on target with current
-                and future technologies.</em></p>
+                to learning and keeping up with new technologies.</em></p>
               <ul>
                 <!-- <li>Portland par 127,Orlando, FL</li> -->
                 <!-- <li>(123) 456-7891</li> -->
@@ -267,7 +266,7 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Bachelor of Computer Science</h4>
-              <h5>2020 - Present</h5>
+              <h5>2020 - 2024</h5>
               <p><em>NFC-IET University, Multan, PK</em></p>
               <p></p>
             </div>
@@ -288,12 +287,21 @@
                 <li>Developed and implemented game features
                   independently while seeking guidance from senior
                   developer.</li>
-                <li>Researched and implemented new technologies/kits to
+                <li>Researched and implemented new packages/kits to
                   enhance game functionality.</li>
                 <li>Optimize game performance and resolve technical
                   issues for smooth gameplay experience.</li>
-                <li>Successfully completed assigned tasks and projects
-                  within given deadlines.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Unity Game Developer</h4>
+              <h5>Aug 2023 - Present</h5>
+              <p><em>Freelancing - Upwork, Linkedin </em></p>
+              <ul>
+                <li>Top Rated and 100% job success rate on Upwork.</li>
+                <li>Handled and delivered multiple projects to clients.</li>
+                <li>Projects include either from scratch or using pre-made
+                  packages and bug fixing.</li>
               </ul>
             </div>
             <!-- <div class="resume-item">
@@ -333,6 +341,32 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-indie">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/riders-paradise-main.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Riders Paradise</h4>
+                <p>Cycle racing</p>
+                <div class="portfolio-links">
+                <a href="portfolio-riders-paradise.html" title="More Details"><i class="bx bx-detail"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-indie">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/baby-brain-booster-main.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Baby Brain Booster</h4>
+                <p>2D puzzle matching</p>
+                <div class="portfolio-links">
+                <a href="portfolio-baby-brain-booster.html" title="More Details"><i class="bx bx-detail"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-indie">
             <div class="portfolio-wrap">
