--- a/portfolio-baby-brain-booster.html
+++ b/portfolio-baby-brain-booster.html
@@ -77,7 +77,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Gun Shooting: Zombie Game</h2>
+          <h2>Baby Brain Booster</h2>
         </div>
 
       </div>
@@ -92,25 +92,44 @@
           <div class="col-lg-8">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
-                
+
+              <!-- <div class="swiper-slide">
+                  <video width="832" height="470" controls>
+                      <source src="assets/img/portfolio/chikify-vid.mp4" type="video/mp4">
+                      Your browser does not support the video tag.
+                  </video>
+              </div> -->
+
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/zombie-main.jpg" alt="">
+                  <img src="assets/img/portfolio/baby-brain-booster-1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/zombie-2.jpg" alt="">
+                  <img src="assets/img/portfolio/baby-brain-booster-2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/zombie-3.jpg" alt="">
+                  <img src="assets/img/portfolio/baby-brain-booster-3.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                    <img src="assets/img/portfolio/zombie-4.jpg" alt="">
+                  <img src="assets/img/portfolio/baby-brain-booster-4.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                    <img src="assets/img/portfolio/zombie-5.jpg" alt="">
+                  <img src="assets/img/portfolio/baby-brain-booster-5.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/baby-brain-booster-6.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/baby-brain-booster-7.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/baby-brain-booster-8.jpg" alt="">
                 </div>
 
               </div>
@@ -122,25 +141,30 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Action, Shooter</li>
-                <li><strong>Technologies Used</strong>: Unity3D, C#, Unity third-party plugins like Realistic FPS, ControlFreak2</li>
-                <li><strong>Duration</strong>: 2-Weeks</li>
-                <li><strong>Project Link</strong>: <a href="https://play.google.com/store/apps/details?id=com.powerplay.fps.zombie.gunshooting.dead.gungames" target="_blank">Google Store</a></li>
+                <li><strong>Category</strong>: 2D puzzle matching</li>
+                <li><strong>Technologies Used</strong>: Unity3D, C#, Canva, Version Control</li>
+                <li><strong>Duration</strong>: 1-Month</li>
+                <li><strong>Project Link</strong>: <a href="https://www.upwork.com/freelancers/~012cc8098899cfe343?mp_source=share">Project from Upwork</a></li>
               </ul>
             </div>
           </div>
 
           <div class="portfolio-description">
-            <h2 class="fst-italic">Take on the role of a skilled soldier as you engage in epic battles against enemies. Additionally, face the undead in 'Zombie Mode.' Fight for your survival against hordes of zombies as they close in on you from all directions. Hold your ground, aim true, and eliminate every zombie to secure victory.
-            </h2>
-            <!-- <ul>
-                <li>Created a environment using pre-made assets.</li>
-                <li>Designed and implemented the player control System.</li>
-                <li>Implemented the camera behavior using Cinemachine.</li>
-                <li>Built the AI (Waypoint System) for herd chickens.</li>
-                <li>Added Particle effects and Sound effects.</li>
-                <li>Implemented an intuitive and visually appealing UI, featuring various menu screens, sleek HUD to show essential gameplay information such as score, reward, and power-ups. All optimized for various screen sizes</li>
-            </ul> -->
+            <h2 class="fst-italic">A fun and colorful 2D puzzle-matching game designed for kids, with engaging gameplay and a vibrant UI to keep their attention and spark creativity.</h2>
+            <ul>
+                <li>Designed 10 levels with 4 unique gameplay types:
+                  <ul>
+                    <li>Match identical objects.</li>
+                    <li>Find and match hidden objects within a time limit.</li>
+                    <li>Match objects with their correct names.</li>
+                    <li>Locate specific random objects from a pile.</li>
+                  </ul>
+                </li>
+                <li>Added smooth UI animations, including sparkles and confetti, to keep kids engaged.</li>
+                <li>Integrated soft background music and light background images for a kid-friendly experience.</li>
+                <li>Implemented a time limit system for all levels to add a fun challenge.</li>
+                <li>Introduced a star rating system, rewarding players based on their completion time.</li>
+            </ul>
           </div>
 
         </div>
