--- a/portfolio-riders-paradise.html
+++ b/portfolio-riders-paradise.html
@@ -77,7 +77,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Gun Shooting: Zombie Game</h2>
+          <h2>Riders Paradise</h2>
         </div>
 
       </div>
@@ -92,26 +92,41 @@
           <div class="col-lg-8">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
-                
+
+              <!-- <div class="swiper-slide">
+                  <video width="832" height="470" controls>
+                      <source src="assets/img/portfolio/chikify-vid.mp4" type="video/mp4">
+                      Your browser does not support the video tag.
+                  </video>
+              </div> -->
+
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/zombie-main.jpg" alt="">
+                  <img src="assets/img/portfolio/riders-paradise-main.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/zombie-2.jpg" alt="">
+                  <img src="assets/img/portfolio/riders-paradise-2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/zombie-3.jpg" alt="">
+                  <img src="assets/img/portfolio/riders-paradise-3.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                    <img src="assets/img/portfolio/zombie-4.jpg" alt="">
+                  <img src="assets/img/portfolio/riders-paradise-4.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                    <img src="assets/img/portfolio/zombie-5.jpg" alt="">
+                  <img src="assets/img/portfolio/riders-paradise-5.png" alt="">
                 </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/riders-paradise-6.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/riders-paradise-7.png" alt="">
+                </div>       
 
               </div>
               <div class="swiper-pagination"></div>
@@ -122,25 +137,26 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Action, Shooter</li>
-                <li><strong>Technologies Used</strong>: Unity3D, C#, Unity third-party plugins like Realistic FPS, ControlFreak2</li>
-                <li><strong>Duration</strong>: 2-Weeks</li>
-                <li><strong>Project Link</strong>: <a href="https://play.google.com/store/apps/details?id=com.powerplay.fps.zombie.gunshooting.dead.gungames" target="_blank">Google Store</a></li>
+                <li><strong>Category</strong>: Cycle racing</li>
+                <li><strong>Technologies Used</strong>: Unity3D, C#, Bicycle physics, illustrator, Version Control</li>
+                <li><strong>Duration</strong>: 4-Months</li>
+                <li><strong>Project</strong>: Bachelars final year project</li>
               </ul>
             </div>
           </div>
 
           <div class="portfolio-description">
-            <h2 class="fst-italic">Take on the role of a skilled soldier as you engage in epic battles against enemies. Additionally, face the undead in 'Zombie Mode.' Fight for your survival against hordes of zombies as they close in on you from all directions. Hold your ground, aim true, and eliminate every zombie to secure victory.
-            </h2>
-            <!-- <ul>
-                <li>Created a environment using pre-made assets.</li>
-                <li>Designed and implemented the player control System.</li>
-                <li>Implemented the camera behavior using Cinemachine.</li>
-                <li>Built the AI (Waypoint System) for herd chickens.</li>
+            <h2 class="fst-italic">A 3d cycle racing game with
+              low-poly cartoonish graphics, featuring competitive AI
+              races and time trials across unique environments</h2>
+            <ul>
+                <li>Created a low-poly environments for all levels.</li>
+                <li>Implemented the cycle physics using a pre-made package.</li>
+                <li>Added time trail levels and added AI feature to compete agaisnt AI in races.</li>
+                <li>Added cutscences and animations for immersive gameplay</li>
                 <li>Added Particle effects and Sound effects.</li>
-                <li>Implemented an intuitive and visually appealing UI, featuring various menu screens, sleek HUD to show essential gameplay information such as score, reward, and power-ups. All optimized for various screen sizes</li>
-            </ul> -->
+                <li>Implemented an intuitive and visually appealing UI, featuring various menu screens, sleek HUD to show essential gameplay information such as position, and time remaining.</li>
+            </ul>
           </div>
 
         </div>
